优化项目结构，删除冗余
